--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "google-maps-react": "^2.0.6",
-    "react": "^16.4.0",
-    "react-dom": "16.4.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.4.2",
+    "react-redux": "^8.0.5",
     "react-scripts": "1.1.4"
   },
   "scripts": {
